<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity"
    android:background="@color/black">

    <ImageButton
        android:backgroundTint="@color/black"
        android:src="@drawable/ic_backspace"
        android:layout_marginEnd="8dp"
        android:id="@+id/btnBackspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/tvResult"
        />

    <TextView
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        android:textSize="48sp"
        android:textStyle="bold"
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnBackspace"
        app:layout_constraintBottom_toTopOf="@id/guideline"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                android:id="@+id/btnAc"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ac" />

            <Button
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                android:id="@+id/btnMakeOpposite"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/make_opposite" />

            <Button
                android:backgroundTint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                android:id="@+id/btnPercent"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/percent" />

            <Button
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btnDivide"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/divide" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btn7"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_7" />

            <Button
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btn8"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_8" />

            <Button
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btn9"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_9" />

            <Button
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btnMultiply"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/multiply" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btn4"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_4" />

            <Button
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btn5"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_5" />

            <Button
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btn6"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6" />

            <Button
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btnSubtract"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/subtract" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btn1"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1" />

            <Button
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btn2"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_2" />

            <Button
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btn3"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3" />

            <Button
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btnAdd"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btn0"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/_0" />

            <Button
                android:backgroundTint="@color/dark_gray"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btnComma"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/comma" />

            <Button
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:layout_margin="8dp"
                android:id="@+id/btnEquals"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/equals" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>